src/test/ui/feature-gates/feature-gate-naked_functions.stderr
error[E0658]: the `#[naked]` attribute is an experimental feature
  --> $DIR/feature-gate-naked_functions.rs:3:1
   |
LL | #[naked]
   | ^^^^^^^^
   |
   = note: see issue #32408 <https://github.com/rust-lang/rust/issues/32408> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable

error[E0658]: the `#[naked]` attribute is an experimental feature
  --> $DIR/feature-gate-naked_functions.rs:9:1
   |
LL | #[naked]
   | ^^^^^^^^
   |
   = note: see issue #32408 <https://github.com/rust-lang/rust/issues/32408> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
